--- a/GTD_EDA_Submission_.ipynb
+++ b/GTD_EDA_Submission_.ipynb
@@ -7,8 +7,6 @@
       "provenance": [],
       "collapsed_sections": [
         "PH-0ReGfmX4f",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
@@ -1104,6 +1102,69 @@
       ],
       "metadata": {
         "id": "OKkE9xzAfS45"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Which attack type is the most common among the terrorist groups.\n",
+        "ga = df.groupby(['attacktype1_txt', 'gname'])\n",
+        "ga_count = ga['attacktype1'].count()\n",
+        "ga_df = pd.DataFrame(ga_count).reset_index()\n",
+        "ga_df = ga_df.sort_values(['attacktype1'] , ascending=False)\n",
+        "ga_df\n"
+      ],
+      "metadata": {
+        "id": "gD7HVSUFiY1n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "ga = df.groupby([ 'gname', 'attacktype1_txt']).size().unstack().fillna(0)\n",
+        "group_name = 'Al-Shabaab'\n",
+        "group_data = ga.loc[group_name]\n",
+        "group_data.plot(kind='bar', figsize=(10, 6))\n",
+        "plt.title(f\"Common Attack Types for {group_name}\")\n",
+        "plt.xlabel(\"Attack Type\")\n",
+        "plt.ylabel(\"Frequency\")\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "jD81aa72mO0V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group by 'AttackType' and count occurrences\n",
+        "common_attack_types = df['attacktype1_txt'].value_counts()\n",
+        "\n",
+        "# Display the most common attack types\n",
+        "print(common_attack_types.head())\n"
+      ],
+      "metadata": {
+        "id": "SsdvdQlUqcpG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gg = df.groupby(['gname'])\n",
+        "gg_count = gg['gname'].count()\n",
+        "gg_count\n"
+      ],
+      "metadata": {
+        "id": "QBPDviAhqcll"
       },
       "execution_count": null,
       "outputs": []
